--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ java {
 	}
 }
 
+graalvmNative {
+	binaries {
+		main {
+			buildArgs.add('--enable-url-protocols=https')
+		}
+	}
+}
+
 repositories {
 	mavenCentral()
 }
